--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
     "axios": "^1.6.0",
     "classnames": "^2.3.2",
     "hygen": "^6.2.11",
+    "localforage": "^1.10.0",
     "markdown-to-jsx": "^7.3.2",
+    "match-sorter": "^6.3.1",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
+    "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "sort-by": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
