--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "redux-saga": "^1.2.3",
     "sort-by": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
